--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 
 .body {
+  margin:0;
 
 }
 .foot {
@@ -9,3 +10,20 @@
   width: 100%;
   bottom: 0;
 }
+
+
+/* ==== Header ====== */
+
+.nav {
+  background-color: aquamarine;
+}
+.nav-logo {
+  width: 100px;
+}
+
+.nav > h1 {
+ color: #013E50;
+ margin-top:25px;
+ margin-left: 15px;
+}
+
