--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
 
-.body {
-  margin:0;
-
-}
 .foot {
   font-size: 13px;
   border: 1px solid red;
-  position: fixed;
   width: 100%;
   bottom: 0;
 }
@@ -27,3 +22,4 @@
  margin-left: 15px;
 }
 
+/* ===== Todos Table======*/
